# webgame

./: .gitignore  AGENTS.md  ANALYZA_A_VYLEPSENI.md  CHANGELOG.md  DISTRIBUCE.md  GITHUB-PUSH.md  MIGRATION-ESM.md  NAVOD.md  README-TAURI.md  README.md  commit-and-push.sh  index.html  index_v2.html  manifest.webmanifest  package.json  release.sh  serve-tailnet.command  shim_test.mjs  start.command  sw.js
css/: style.css  style2.css
js/: actions.js  aging.js  camera.js  capacity.js  cashflow.js  citygrowth.js  constants.js  controlcenter.js  difficulty.js  editor.js  energy.js  events.js  finance.js  heatmap.js  incidents.js  input.js  main.js  map.js  morale.js  objectives.js  palette.js  palettemenu.js  peering.js  perf.js  pixi-fx.js  pricing.js  regulatory.js  render.js  renewable.js  segments.js  sidebar.js  sprite-cache.js  state.js  stockmarket.js  theme.js  ui.js  uigate.js  weather.js  wifi.js
scripts/: prepare-dist.ps1  prepare-dist.sh
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  generate-icons.html
src-tauri/src/: lib.rs  main.rs
tests/: aicloud.test.js  autoupgrade.test.js  bgpoverflow.test.js  bgptiers.test.js  camera.test.js  citygrowth.test.js  cloudadmin.test.js  controlcenter.test.js  difficulty.test.js  editor.test.js  events.test.js  expandmap.test.js  fieldcrew.test.js  installteam.test.js  lbboost.test.js  lbflows.test.js  megadc.test.js  megaplant.test.js  objectives.test.js  outagerefund.test.js  palettemenu.test.js  peakdemand.test.js  perf.test.js  (+12 more)
(+35 files in other folders)
