[package]
name = "nettycoon"
version = "0.1.0"
description = "NetTycoon — česká ISP simulační hra"
authors = ["Míra <mira@pavlicek.cloud>"]
edition = "2021"
rust-version = "1.70"

# Více o tomto souboru: https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nettycoon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# default = ["custom-protocol"] je zapnuto při release buildu přes --no-default-features
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
